add shooting + score

--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@
             <button class="btn" disabled id="continue_game">Continue</button>
         </div>
     </div>
+
+    <div class="frame-results">
+        <h1>Game Over!</h1>
+        <h2>Your Score: <span id="score">0</span></h2>
+    </div>
 </div>
 
+<script src="assets/js/components/Board.js"></script>
 <script src="assets/js/components/Bird.js"></script>
 <script src="assets/js/components/Gun.js"></script>
 <script src="assets/js/script.js"></script>
